Complete portfolio home

--- a/index.html
+++ b/index.html
@@ -5,37 +5,111 @@
   <meta name="viewport" content="width=device-width, intial-scale=1">
   <title>Ekkalux Nguyen</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 
-<!-- Navigation Bar -->
-<header>
-  <div class="container">
-    <h1> <span style="color: #A12222">EKKALUX</span> NGUYEN </h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="#">PORTFOLIO</a></li>
-        <li><a href="#">CONTACT</a></li>
-      </ul>
-    </nav>
-  </div>
-</header>
-<!-- Navigation Bar -->
 
-<!-- Hero -->
-<section>
-  <div class="container_hero">
-    <div class="middle_content">
-      <h1> </h1>
-      <p> </p>
+<section class="hero">
+  <div class="hero_overlay"></div>
+  <div class="hero_container">
+    <h1> EKKALUX NGUYEN</h1>
+    <p> I am a UX/UI designer based in San Francisco passionate about  </p>
+    <p>creating beautiful and intuitive user experience. </p>
+
+    <div class="middle_button_container">
+      <button class="button">View Projects</button>
+    </div>
+
+    <div class="arrow_down_container">
+      <i class="fa fa-arrow-circle-o-down fa-4x"></i>
+    </div>
+  </div>
+
+  <div class="top_button_container">
+    <a href="Resume.pdf" target="_blank"><button class="button_about">Resume </button></a>
+    <button class="button_resume">Contact </button>
+  </div>
+</section>
+
+
+<section class="about">
+  <div class="about_container">
+    <h1> ABOUT </h1>
+    <p>Hello! I’m Ekkalux or Lux for short. I am a UX/UI Designer based in San Francisco
+       passionate about creating simple yet user-centric design experience. I have
+       an affinity for creating products that bridge the gap between technology, education, and health.</p>
+
+    <div class="about_button_container">
+      <p> Feel free to get in touch with me if you have opportunities for projects or open positions! </p>
+      <button class="button_contact">Contact</button>
     </div>
   </div>
 </section>
-<!-- Hero -->
+
+
+<section class="projects">
+  <h1> PROJECTS </h1>
+  <div class="project_container">
+    <div class="ridestarter_container">
+      <div class="ridestarter_text">
+        <h1> Ridestarter </h1>
+        <h2> UX Research | UX Design | Brand Identity </h2>
+        <p> A crowdfunding web application for organizations and individuals
+        looking to either raise funds or donate to charity bike rides. </p>
+        <div class="ridestarter_button">
+          <a href="ridestarter_casestudy.pdf" target="_blank"><button class="button_ridestarter">Case Study</button></a>
+          <a href="https://invis.io/Z2D6DKKTY" target="_blank"><button class="button_ridestarter">Prototype</button></a>
+        </div>
+      </div>
+      <div class="ridestarter_image">
+      </div>
+    </div>
+
+    <div class="simplebox_container">
+      <div class="simplebox_text">
+        <h1> Simplebox </h1>
+        <h2> UX Research | UX Design | Brand Identity </h2>
+        <p> A web application that allows users to collect information and store it in a centralized location.</p>
+        <div class="simplebox_button">
+          <button class="button_simplebox">Case Study</button>
+          <a href="https://invis.io/8PC2WA7AH" target="_blank"><button class="button_simplebox">Prototype</button></a>
+        </div>
+      </div>
+      <div class="simplebox_image">
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="contact">
+  <h1> CONTACT </h1>
+  <div class="contact_container">
+    <input type="text" id="name" name="name" placeholder="Name...">
+    <input type="text" id="email" name="email" placeholder="Email Address...">
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+    <input type="submit" value="Submit">
+  </div>
+</section>
+
+
 
 </body>
+
+
+<section class="footer">
+  <div class="left_footer">
+    2017 Ekkalux Nguyen | All Rights Reserved.
+  </div>
+
+  <div class="right_footer">
+    <a href="https://www.facebook.com/nguyenlac377"><i class="fa fa-facebook-official fa-2x"></i></a>
+    <a href="https://www.linkedin.com/in/ekkaluxnguyen/"><i class="fa fa-linkedin-square fa-2x"></i></a>
+    <a href="https://www.behance.net/ekkaluxnguyen"><i class="fa fa-behance-square fa-2x"></i></a>
+  </div>
+</section>
+
+
 
 </html>
