--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
   <title>Ekkalux Nguyen</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
+  <script src="js/scrolldown.js"></script>
+
 </head>
 
 <body>
-
 
 <section class="hero">
   <div class="hero_overlay"></div>
@@ -19,7 +22,7 @@
     <p>creating beautiful and intuitive user experience. </p>
 
     <div class="middle_button_container">
-      <button class="button">View Projects</button>
+      <button class="button">About Me</button>
     </div>
 
     <div class="arrow_down_container">
@@ -28,23 +31,8 @@
   </div>
 
   <div class="top_button_container">
-    <a href="Resume.pdf" target="_blank"><button class="button_about">Resume </button></a>
-    <button class="button_resume">Contact </button>
-  </div>
-</section>
-
-
-<section class="about">
-  <div class="about_container">
-    <h1> ABOUT </h1>
-    <p>Hello! I’m Ekkalux or Lux for short. I am a UX/UI Designer based in San Francisco
-       passionate about creating simple yet user-centric design experience. I have
-       an affinity for creating products that bridge the gap between technology, education, and health.</p>
-
-    <div class="about_button_container">
-      <p> Feel free to get in touch with me if you have opportunities for projects or open positions! </p>
-      <button class="button_contact">Contact</button>
-    </div>
+    <a href="Resume.pdf" target="_blank"><button class="button_resume">Resume </button></a>
+    <button class="button_contact">Contact </button>
   </div>
 </section>
 
@@ -83,13 +71,24 @@
   </div>
 </section>
 
+<section class="about">
+  <div class="about_container">
+    <h1> ABOUT </h1>
+    <p>Hello! I’m Ekkalux or Lux for short. I am a UX/UI Designer based in San Francisco
+       passionate about creating simple yet user-centric design experience. I have
+       an affinity for creating products that bridge the gap between technology, education, and health.
+       I strategize design solutions in the form of user research, wireframes, prototypes, iterations through
+       usability testing, and a tad of front-end development. When I'm no designing or coding, I enjoy staying
+       fit, biking, and traveling. </p>
+  </div>
+</section>
+
 <section class="contact">
   <h1> CONTACT </h1>
   <div class="contact_container">
-    <input type="text" id="name" name="name" placeholder="Name...">
-    <input type="text" id="email" name="email" placeholder="Email Address...">
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-    <input type="submit" value="Submit">
+    <p> I am always looking to make the net better. Feel free to get in touch with me if you have
+      opportunities for projects or open positions!</p>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSegqfUFqfZbNikQQFP_JDGc8hcajth3xduNM2hp5D2OuUd3BQ/viewform" target="_blank"><button class="button_touch">Get in touch</button></a>
   </div>
 </section>
 
