--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <section class="about">
   <div class="about_container">
     <h1> ABOUT </h1>
-    <p>Hello! I’m Ekkalux or Lux for short. I am a UX/UI Designer based in San Francisco
+    <p>Hello! I’m Ekkalux or Lux for short. I'm a UX/UI Designer based in San Francisco
        passionate about creating simple yet user-centric design experience. I have
        an affinity for creating products that bridge the gap between technology, education, and health.
        I strategize design solutions in the form of user research, wireframes, prototypes, iterations through
