--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h2> UX Research | UX Design | Brand Identity </h2>
         <p> A web application that allows users to collect information and store it in a centralized location.</p>
         <div class="simplebox_button">
-          <button class="button_simplebox">Case Study</button>
+          <a href="simplebox_casestudy.pdf" target="_blank"><button class="button_simplebox">Case Study</button></a>
           <a href="https://invis.io/8PC2WA7AH" target="_blank"><button class="button_simplebox">Prototype</button></a>
         </div>
       </div>
@@ -91,8 +91,6 @@
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSegqfUFqfZbNikQQFP_JDGc8hcajth3xduNM2hp5D2OuUd3BQ/viewform" target="_blank"><button class="button_touch">Get in touch</button></a>
   </div>
 </section>
-
-
 
 </body>
 
