--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
        passionate about creating simple yet user-centric design experience. I have
        an affinity for creating products that bridge the gap between technology, education, and health.
        I strategize design solutions in the form of user research, wireframes, prototypes, iterations through
-       usability testing, and a tad of front-end development. When I'm no designing or coding, I enjoy staying
+       usability testing, and a tad of front-end development. When I'm not designing or coding, I enjoy staying
        fit, biking, and traveling. </p>
   </div>
 </section>
@@ -86,7 +86,7 @@
 <section class="contact">
   <h1> CONTACT </h1>
   <div class="contact_container">
-    <p> I am always looking to make the net better. Feel free to get in touch with me if you have
+    <p> I am always looking to make the net better. Feel free to get in touch with me if you have 
       opportunities for projects or open positions!</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSegqfUFqfZbNikQQFP_JDGc8hcajth3xduNM2hp5D2OuUd3BQ/viewform" target="_blank"><button class="button_touch">Get in touch</button></a>
   </div>
