--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p> A crowdfunding web application for organizations and individuals
         looking to either raise funds or donate to charity bike rides. </p>
         <div class="ridestarter_button">
-          <a href="ridestarter_casestudy.pdf" target="_blank"><button class="button_ridestarter">Case Study</button></a>
+          <a href="ridestarter.html"><button class="button_ridestarter">Case Study</button></a>
           <a href="https://invis.io/Z2D6DKKTY" target="_blank"><button class="button_ridestarter">Prototype</button></a>
         </div>
       </div>
@@ -64,10 +64,16 @@
           <a href="simplebox_casestudy.pdf" target="_blank"><button class="button_simplebox">Case Study</button></a>
           <a href="https://invis.io/8PC2WA7AH" target="_blank"><button class="button_simplebox">Prototype</button></a>
         </div>
+
       </div>
       <div class="simplebox_image">
       </div>
     </div>
+
+    <div class="more_projects">
+      <a href="https://www.behance.net/ekkaluxnguyen" target="_blank"><button class="button_more_projects">More Projects on Behance</button></a>
+    </div>
+
   </div>
 </section>
 
@@ -78,7 +84,9 @@
        passionate about creating simple yet user-centric design experience. I have
        an affinity for creating products that bridge the gap between technology, education, and health.
        I strategize design solutions in the form of user research, wireframes, prototypes, iterations through
-       usability testing, and a tad of front-end development. When I'm not designing or coding, I enjoy staying
+       usability testing, and a tad of front-end development. Additionally, I have experience with
+
+        When I'm not designing or coding, I enjoy staying
        fit, biking, and traveling. </p>
   </div>
 </section>
@@ -86,7 +94,7 @@
 <section class="contact">
   <h1> CONTACT </h1>
   <div class="contact_container">
-    <p> I am always looking to make the net better. Feel free to get in touch with me if you have 
+    <p> I am always looking to make the net better. Feel free to get in touch with me if you have
       opportunities for projects or open positions!</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSegqfUFqfZbNikQQFP_JDGc8hcajth3xduNM2hp5D2OuUd3BQ/viewform" target="_blank"><button class="button_touch">Get in touch</button></a>
   </div>
