--- a/portfolio.html
+++ b/portfolio.html
@@ -84,9 +84,9 @@
        passionate about creating simple yet user-centric design experience. I have
        an affinity for creating products that bridge the gap between technology, education, and health.
        I strategize design solutions in the form of user research, wireframes, prototypes, iterations through
-       usability testing, and a tad of front-end development. Additionally, I have experience with
-
-        When I'm not designing or coding, I enjoy staying
+       usability testing, and a tad of front-end development. I also have experience with
+       designing graphic assets such as banners, flyers, newsletters, and digital prints.
+       When I'm not designing or coding, I enjoy staying
        fit, biking, and traveling. </p>
   </div>
 </section>
