--- a/ridestarter.html
+++ b/ridestarter.html
@@ -28,7 +28,7 @@
   </div>
 
   <div class="arrow_back_container">
-    <a href="index.html"><i class="fa fa-arrow-circle-o-left fa-4x"></i></a>
+    <a href="portfolio.html"><i class="fa fa-arrow-circle-o-left fa-4x"></i></a>
   </div>
 
 </section>
