case study completed

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,6 +16,7 @@
 
 <section class="hero">
   <div class="hero_overlay"></div>
+
   <div class="hero_container">
     <h1> EKKALUX NGUYEN</h1>
     <p> I am a UX/UI designer based in San Francisco passionate about  </p>
@@ -40,7 +41,9 @@
 <section class="projects">
   <h1> PROJECTS </h1>
   <div class="project_container">
+
     <div class="ridestarter_container">
+      <img src="images/ridestarter_laptop.png">
       <div class="ridestarter_text">
         <h1> Ridestarter </h1>
         <h2> UX Research | UX Design | Brand Identity </h2>
@@ -51,24 +54,21 @@
           <a href="https://invis.io/Z2D6DKKTY" target="_blank"><button class="button_ridestarter">Prototype</button></a>
         </div>
       </div>
-      <div class="ridestarter_image">
-      </div>
     </div>
 
     <div class="simplebox_container">
+      <img src="images/simplebox_laptop.png">
       <div class="simplebox_text">
         <h1> Simplebox </h1>
         <h2> UX Research | UX Design | Brand Identity </h2>
         <p> A web application that allows users to collect information and store it in a centralized location.</p>
         <div class="simplebox_button">
-          <a href="simplebox_casestudy.pdf" target="_blank"><button class="button_simplebox">Case Study</button></a>
+          <a href="simplebox.html" target="_blank"><button class="button_simplebox">Case Study</button></a>
           <a href="https://invis.io/8PC2WA7AH" target="_blank"><button class="button_simplebox">Prototype</button></a>
         </div>
-
-      </div>
-      <div class="simplebox_image">
       </div>
     </div>
+
 
     <div class="more_projects">
       <a href="https://www.behance.net/ekkaluxnguyen" target="_blank"><button class="button_more_projects">More Projects on Behance</button></a>
