--- a/ridestarter.html
+++ b/ridestarter.html
@@ -15,9 +15,12 @@
 <body>
 
 <section class="hero">
-  <div class="devices_image">
+  <div class="arrow_back_container">
+    <a href="portfolio.html"><i class="fa fa-arrow-circle-o-left fa-4x"></i></a>
   </div>
 
+  <div class="hero_container">
+  <img src="images/ridestarter/ridestarter_hero_image.png">
   <div class="title_container">
     <h1> RIDESTARTER </h1>
     <p>A crowdfunding web application for organizations and individuals
@@ -26,11 +29,7 @@
       <i class="fa fa-arrow-circle-o-down fa-lg"></i>
     </div>
   </div>
-
-  <div class="arrow_back_container">
-    <a href="portfolio.html"><i class="fa fa-arrow-circle-o-left fa-4x"></i></a>
   </div>
-
 </section>
 
 <nav class="navigation">
@@ -63,7 +62,12 @@
       challenges for the community to partake in while raising awareness
       for causes that users care about. The application is also created for cycle
       enthusiasts who wanted to create a fundraiser and tell an adventurous story
-      through their journey of making a difference in the community. </p>
+      through their journey for making a difference in the community.
+
+      Donators can browse through different projects and make a donation of their choice.
+      Fundraisers can create project rides with exclusive features such as uploading map routes or designating
+      the total distance for filtering purposes.
+    </p>
   </div>
 </section>
 
@@ -89,19 +93,29 @@
 
       <a href="https://docs.google.com/spreadsheets/d/1I71riCTMi-fcfzlis8xqgAgljlUzt9PmAgFs3RwU1fQ/edit?usp=sharing" target="_blank">
           Click here to view the survey responses </a>
-
+      <img src="images/ridestarter/survey.png">
     </div>
-    <div class="survey_image">
+
+    <div class="competitive_analysis"> Competitive Analysis <hr>
+      <p> Based from the analysis, it was apparent that almost all crowdfunding sites strive for similiar
+        features - progress meter and donation goals. Because Ridestarter is a charity bike crowdfunding source,
+        it's important that the application contains features unique to charity bike rides. </p>
+      <a href="https://docs.google.com/spreadsheets/d/1f1FW3b75Uf-R_5KEUwpLFI_N9QV515_YGSm9SxUTedM/edit?usp=sharing" target="_blank">
+      You can take a closer look of the competitive analysis here. </a>
+      <img src="images/ridestarter/competitive_analysis.png" >
     </div>
 
     <div class="personas"> Personas <hr>
       <p>After conducting four user interviews and compiling the survey, I created three
-        imaginary user personas to reflect both the fundraiser and donor perspective. </p>
-      <div class="luke"></div>
-      <div class="peter"></div>
-      <div class="hunter"></div>
+        user personas to reflect both the fundraiser and donor perspective. My goal was to develop
+      empathy for the users and how they will interact with the application. </p>
+      <img src="images/ridestarter/luke.png">
+      <img src="images/ridestarter/peter.png">
+      <img src="images/ridestarter/hunter.png">
     </div>
   </div>
+
+</section>
 
   <section class="design_choices">
     <div class="design_container">
@@ -114,18 +128,18 @@
         <a href="https://drive.google.com/file/d/0B0bktw2AN4LKaTg4d2pSb19PdWM/view?usp=sharing">
           Click here to view the online user flow </a>
 
-        <div class="user_flow_image">
-        </div>
+        <img src="images/ridestarter/user_flow.png">
       </div>
 
       <div class="branding"> Branding/Typography <hr>
-        <p>I designed the style guide in illustrator. I chose the font Noto Sans to use
-           for the brand name. I wanted to keep the name simple, yet engaging so I added
-            a bike icon above the title. Green is used as the primary color for Ridestater because
-            it represents the imagery of what riders would see on their journey - nature, trees, lush
-            foliages, and the wildlife. </p>
-        <div class="branding_picture">
-        </div>
+        <p> With Ridestarter being a crowdfunding application,<b> evoking trust</b> is one of the
+          most important facets in getting users to use the site. Green is used as the primary color for
+          Ridestarter because not only green associates with money flow, but also promotes
+          a love for nature and foliages, which are all presented during a rider's journey. After careful consideration
+          about the logo, I went with the less is more principle and used a typeface (Noto Sans) and a bike
+          logo to evoke both professionalism and easy identification. </p>
+
+        <img src="images/ridestarter/ridestarter_branding.png">
       </div>
 
       <div class="low_mockups"> Low-Fidelity Wireframes <hr>
@@ -134,8 +148,9 @@
           focuses on a particular problem. </p>
 
         <div class="low_mockups_image_container">
-          <div class="homepage_low_image">
-          </div>
+          <img src="images/ridestarter/homepage_low.png">
+          <img src="images/ridestarter/charity_low.png">
+        </div>
 
           <div class="charity_low_image">
           </div>
@@ -181,7 +196,9 @@
 
   <div class="special_features"> Special Features <hr>
     <div class="charity_page_container">
-      <div class="charity_page_text"> Designing an Intuitive Charity Page
+      <img src="images/ridestarter/charity_page.png">
+      <div class="charity_page_text">
+        Designing an Intuitive Charity Page
         <p>Two of the most important functions in the info box are the “Interested
         in riding?” and the link to the donated organization - both highlighted in green. </p>
         <p>The “interested in riding” contact reinforces the goal of the application to bridge
@@ -196,9 +213,6 @@
         donate. For some interviewees, being featured as Top Donors add an
         incentive for them to make a donation. </p>
        </div>
-
-       <div class="charity_page_image">
-       </div>
     </div>
 
     <div class="guest_checkout_container">
@@ -207,12 +221,12 @@
          process hinders their motivation to donate. In pursuance of getting users
          to quickly reach the end-stage of the donation process, Ridestarter
          allows users to donate as a guest, with no commitments to making an account. </p>
-       </div>
-       <div class="guest_checkout_image">
-       </div>
+      </div>
+      <img src="images/ridestarter/guest_checkout.png">
     </div>
 
     <div class="filter_container">
+      <img src="images/ridestarter/filter.png">
       <div class="filter_text"> Discovering the Filter System
         <p>Having a filter system is important to search for different types of
           charities. Users are able to filter through category, location, and the
@@ -220,13 +234,9 @@
           challenge cards by oldest to newest, alphabetical order, and the completion rate.
           This feature connects users to what they are specifically looking for when searching for a ride project. </p>
       </div>
-
-      <div class="filter_image">
-      </div>
-
     </div>
-
   </div>
+
 </section>
 
 <section class="final">
@@ -239,9 +249,9 @@
     <a href="https://invis.io/Z2D6DKKTY" target="_blank"> You can check out Ridestarter's interactive prototype here. </a>
 
     <div class="final_image">
-      <div class="final_homepage"></div>
-      <div class="final_charity"></div>
-      <div class="final_payment"></div>
+      <img src="images/ridestarter/homepage.png">
+      <img src="images/ridestarter/charity_page.png">
+      <img src="images/ridestarter/payment.png">
     </div>
 
   </div>
@@ -266,4 +276,23 @@
        in any of my future design. </p>
   </div>
 
+</section>
+
+<section class="contact">
+  <hr>
+  <h1> Contact me! </h1>
+  <p> Like my project and want to talk? Send me a message!</p>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSegqfUFqfZbNikQQFP_JDGc8hcajth3xduNM2hp5D2OuUd3BQ/viewform" target="_blank"><button class="button_touch"> Contact Me</button></a>
+</section>
+
+<section class="footer">
+  <div class="left_footer">
+    2017 Ekkalux Nguyen | All Rights Reserved.
+  </div>
+
+  <div class="right_footer">
+    <a href="https://www.facebook.com/nguyenlac377"><i class="fa fa-facebook-official fa-2x"></i></a>
+    <a href="https://www.linkedin.com/in/ekkaluxnguyen/"><i class="fa fa-linkedin-square fa-2x"></i></a>
+    <a href="https://www.behance.net/ekkaluxnguyen"><i class="fa fa-behance-square fa-2x"></i></a>
+  </div>
 </section>
