case study completed 2

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
 
 
 <section class="projects">
-  <h1> PROJECTS </h1>
+  <h1> PROJECTS </h1> <hr>
   <div class="project_container">
 
     <div class="ridestarter_container">
@@ -79,7 +79,7 @@
 
 <section class="about">
   <div class="about_container">
-    <h1> ABOUT </h1>
+    <h1> ABOUT </h1> <hr>
     <p>Hello! I’m Ekkalux or Lux for short. I'm a UX/UI Designer based in San Francisco
        passionate about creating simple yet user-centric design experience. I have
        an affinity for creating products that bridge the gap between technology, education, and health.
@@ -92,7 +92,7 @@
 </section>
 
 <section class="contact">
-  <h1> CONTACT </h1>
+  <h1> CONTACT </h1> <hr>
   <div class="contact_container">
     <p> I am always looking to make the net better. Feel free to get in touch with me if you have
       opportunities for projects or open positions!</p>
