--- a/ridestarter.html
+++ b/ridestarter.html
@@ -75,6 +75,9 @@
   <div class="research_container">
     <h1> RESEARCHING THE CHALLENGES </h1>
     <div class="survey_findings"> Survey Findings <hr>
+      <p> At this initial stage, it was important to gain a better understanding of users' behavior of
+        donating to a charity or spearheading a fundraiser. Listening and  </p>
+
       <p>1. Most respondents were motivated to donate because they want to feel
       that they’re making an impact in the world. </p>
       <p>2. Some respondents felt the process of creating an account and going
@@ -82,14 +85,16 @@
       <p>3. People usually don’t donate because they are sketpical of donation sites -
       where the money is going to and how much of an impact they are making. Another
       popular response is that they feel that their donation is too small to make a difference. </p>
-      <p><b>In addition to the general crowd of respondents and interviewees, I also turned the
-      table to people who have been on charity bike rides. These are my findings:</b> </p>
+
+      <p>In addition to the survey, I also conducted <b>user interviews</b> on
+      people who have been on charity bike rides and have experienced through the fundraising process. These are my findings:</p>
+
       <p>1. Fundraisers generally have to reach out to the organization that they’re
         supporting to host the fundraising site. This makes it hard to gain traction from
         the cyclist community to donate. </p>
       <p>2. Most of the donors were generated from family member or friends. In addition,
         one interesting observation was that people are more estatic to donate if the individual
-        or group partakes in a challenge rather than just “asking for money.” </p>
+        or group partakes in a challenge rather than “asking for money.” </p>
 
       <a href="https://docs.google.com/spreadsheets/d/1I71riCTMi-fcfzlis8xqgAgljlUzt9PmAgFs3RwU1fQ/edit?usp=sharing" target="_blank">
           Click here to view the survey responses </a>
@@ -165,8 +170,7 @@
   <div class="implement_container">
     <h1> GEARING THE DESIGN IMPLEMENTATION </h1>
     <div class="user_testing"> User Testing <hr>
-      <p> I met up with four different users to conduct in-person usability testing on the
-        high-fidelity mockups. These are some of the most important questions that I asked
+      <p> I conducted a <b>contextual interview </b> on four different users to get feedback on the prototypes. These are some of the most important questions that I asked
         during the testing as they went through the website: </p>
       <p>1. Look at the homepage. What do you think this website is about? </p>
       <p>2. Find a challenge and make a donation. </p>
@@ -198,7 +202,7 @@
     <div class="charity_page_container">
       <img src="images/ridestarter/charity_page.png">
       <div class="charity_page_text">
-        Designing an Intuitive Charity Page
+        Designing an Intuitive Charity Page<hr>
         <p>Two of the most important functions in the info box are the “Interested
         in riding?” and the link to the donated organization - both highlighted in green. </p>
         <p>The “interested in riding” contact reinforces the goal of the application to bridge
@@ -216,18 +220,18 @@
     </div>
 
     <div class="guest_checkout_container">
-      <div class="guest_checkout_text"> Improving the Donation Process
+      <img src="images/ridestarter/guest_checkout.png">
+      <div class="guest_checkout_text"> Improving the Donation Process <hr>
         <p>According to my research, some respondents felt that the long checkout
          process hinders their motivation to donate. In pursuance of getting users
          to quickly reach the end-stage of the donation process, Ridestarter
          allows users to donate as a guest, with no commitments to making an account. </p>
       </div>
-      <img src="images/ridestarter/guest_checkout.png">
     </div>
 
     <div class="filter_container">
       <img src="images/ridestarter/filter.png">
-      <div class="filter_text"> Discovering the Filter System
+      <div class="filter_text"> Discovering the Filter System<hr>
         <p>Having a filter system is important to search for different types of
           charities. Users are able to filter through category, location, and the
           total mileage of the challenge. Additionally, they can sort through the
@@ -269,8 +273,9 @@
       the user experiences. On the contrary, it’s harder for me to give up or add a design
       element once I have already invest in time in a design. </p>
 
-    <p>Testers were overall impressed with the design structure and content. Based
-      on the feedback, trustworthiness is one of the most important aspect to getting
+    <p>Testers were overall impressed with the design structure and content. Listening closely to users during
+      the interview process helped me emphathize with their motives and thought process.
+      Based on the feedback, trustworthiness is one of the most important aspect to getting
       users to use an application. Asking questions such as “Does this page follows the
        current trend in modernizing the style or buttons?” This could always be improved
        in any of my future design. </p>
