--- a/simplebox.html
+++ b/simplebox.html
@@ -67,7 +67,7 @@
 <section class="solution">
   <div class="solution_container">
     <h1> SOLUTION </h1>
-    <p> Due to the increase amount of mobile collaboration tools, technological jargon and servies deter
+    <p> Due to the increase amount of mobile collaboration tools, technological jargon and cluttered services deter
       users from using the specific product. Simplebox simplifies this and creates a tool that is easily accessible for all users to conveniently save and
       share content across multiple devices. Users start off with a free account and can then toggle between different priced account.
   </div>
@@ -111,7 +111,7 @@
   <div class="user_flow"> User Flow <hr>
     <p>From the research, I made a list of user stories to help me create user flows.
       In the diagram, I focus on the different user experience for both new and returning
-      users, with several similarities. This process helped me in creating a minimum viable
+      users, with several similarities. This process helped me craft a minimum viable
       product for simpleBox. </p>
     <p><a href="https://drive.google.com/file/d/0B0bktw2AN4LKdGxCVUhjdExSS3c/view?usp=sharing" target="_blank">
       Click here to view the user flow </a><p>
@@ -168,7 +168,7 @@
 
   <p>However, I found out that there was a slight delay when users were trying to add content to simpleBox. To tackle this issue, I created two
     versions of the dashboard with two different placements of the add button. I then conducted
-     a preference test on UsabilityHub to see which version is more intuitive.
+     a <b>preference test on UsabilityHub </b> to see which version is more intuitive.
      Based on the results, version one (original) performs better than version two by 80:20.
      The test had 10 responses which may not be the best representative of the majority. Although
      the add button in version two is bigger, it was slightly more difficult to spot according to
