--- a/ridestarter.html
+++ b/ridestarter.html
@@ -16,7 +16,7 @@
 
 <section class="hero">
   <div class="arrow_back_container">
-    <a href="portfolio.html"><i class="fa fa-arrow-circle-o-left fa-4x"></i></a>
+    <a href="index.html"><i class="fa fa-arrow-circle-o-left fa-4x"></i></a>
   </div>
 
   <div class="hero_container">
@@ -86,8 +86,8 @@
       where the money is going to and how much of an impact they are making. Another
       popular response is that they feel that their donation is too small to make a difference. </p>
 
-      <p>In addition to the survey, I also conducted <b>user interviews</b> on
-      people who have been on charity bike rides and have experienced through the fundraising process. These are my findings:</p>
+      <p><b>In addition to the survey, I also conducted user interviews on
+      people who have been on charity bike rides and have experienced through the fundraising process. These are my findings: </b></p>
 
       <p>1. Fundraisers generally have to reach out to the organization that they’re
         supporting to host the fundraising site. This makes it hard to gain traction from
