--- a/simplebox.html
+++ b/simplebox.html
@@ -18,7 +18,7 @@
 
 <section class="hero">
   <div class="arrow_back_container">
-    <a href="portfolio.html"><i class="fa fa-arrow-circle-o-left fa-4x"></i></a>
+    <a href="index.html"><i class="fa fa-arrow-circle-o-left fa-4x"></i></a>
   </div>
   <div class="hero_container">
     <img src="images/simplebox/simplebox_background.png"></img>
