changes for cname

--- a/ridestarter.html
+++ b/ridestarter.html
@@ -74,9 +74,11 @@
 <section class="research">
   <div class="research_container">
     <h1> RESEARCHING THE CHALLENGES </h1>
+
     <div class="survey_findings"> Survey Findings <hr>
       <p> At this initial stage, it was important to gain a better understanding of users' behavior of
         donating to a charity or spearheading a fundraiser. Listening and  </p>
+      <div class="survey_findings_2">
 
       <p>1. Most respondents were motivated to donate because they want to feel
       that they’re making an impact in the world. </p>
@@ -92,10 +94,9 @@
       <p>1. Fundraisers generally have to reach out to the organization that they’re
         supporting to host the fundraising site. This makes it hard to gain traction from
         the cyclist community to donate. </p>
-      <p>2. Most of the donors were generated from family member or friends. In addition,
-        one interesting observation was that people are more estatic to donate if the individual
-        or group partakes in a challenge rather than “asking for money.” </p>
-
+      <p>2. One interesting observation was that people are more likely to donate or feel more
+        comfortable fundraising if the project entice challenges. </p>
+      </div>
       <a href="https://docs.google.com/spreadsheets/d/1I71riCTMi-fcfzlis8xqgAgljlUzt9PmAgFs3RwU1fQ/edit?usp=sharing" target="_blank">
           Click here to view the survey responses </a>
       <img src="images/ridestarter/survey.png">
@@ -148,18 +149,11 @@
       </div>
 
       <div class="low_mockups"> Low-Fidelity Wireframes <hr>
-        <p>After finishing up the style guide, I proceeded to sketch the low-fidelity
+        <p>Based on user research, I proceeded to sketch the low-fidelity
           wireframes in Balsamiq. I designed the wireframes based on each user story that
           focuses on a particular problem. </p>
 
-        <div class="low_mockups_image_container">
-          <img src="images/ridestarter/homepage_low.png">
-          <img src="images/ridestarter/charity_low.png">
-        </div>
-
-          <div class="charity_low_image">
-          </div>
-        </div>
+        <img src="images/ridestarter/ridestarter_low.png">
 
       </div>
 
@@ -206,7 +200,7 @@
         <p>Two of the most important functions in the info box are the “Interested
         in riding?” and the link to the donated organization - both highlighted in green. </p>
         <p>The “interested in riding” contact reinforces the goal of the application to bridge
-        the gap between donating and inspiring potential riders to participate in the challenge. Additionally,
+        the gap between donating and inspiring potential riders to participate in the challenge.
         during user testing, one of the users pointed out that it would be useful to link the organization's official site where the funds
         are going to. This allows user to conveniently understand where exactly the donated funds are contributing.  </p>
         <p>Based on the user research, majority of participants think that the progress bar
@@ -239,6 +233,7 @@
           This feature connects users to what they are specifically looking for when searching for a ride project. </p>
       </div>
     </div>
+
   </div>
 
 </section>
@@ -252,20 +247,12 @@
       I designed 24 high-fidelity wireframes in Sketch; below are some of the highlighted pages:</p>
     <a href="https://invis.io/Z2D6DKKTY" target="_blank"> You can check out Ridestarter's interactive prototype here. </a>
 
-    <div class="final_image">
-      <img src="images/ridestarter/homepage.png">
-      <img src="images/ridestarter/charity_page.png">
-      <img src="images/ridestarter/payment.png">
-    </div>
+    <img src="images/ridestarter/ridestarter_high.png">
 
   </div>
 
   <div class="conclusion">
     <h1> Conclusion </h1>
-    <p>Ridestarter was a project done for the online design program, Bloc. I drew
-      inspiration from notable crowdfunding sites such as GoFundme and Kickstarter. The design
-      contains ideas that I would love to see in a live crowdfunding website when
-      considering to create or donate to charity bike rides. </p>
 
     <p>If given more time, I would love the opportunity to spend more time doing usability
       testing early during the low-fidelity wireframing phase. Psychologically, I feel
@@ -274,7 +261,8 @@
       element once I have already invest in time in a design. </p>
 
     <p>Testers were overall impressed with the design structure and content. Listening closely to users during
-      the interview process helped me emphathize with their motives and thought process.
+      the interview process helped me emphathize with their motives and thought process. Additionally,
+      analyzing user feedback and translating them into mockups is always enjoyable.
       Based on the feedback, trustworthiness is one of the most important aspect to getting
       users to use an application. Asking questions such as “Does this page follows the
        current trend in modernizing the style or buttons?” This could always be improved
