--- a/simplebox.html
+++ b/simplebox.html
@@ -53,7 +53,7 @@
 
 <section class="summary">
   <div class="summary_container">
-    <h1> SUMMARY </h1>
+    <h1> SUMMARY </h1><hr>
     <p> simpleBox is a SaaS web application which allows users to collect information and store it in a
       single place. Users can create documents, store images, links to websites, and
       collaborate with others. </p>
@@ -78,7 +78,7 @@
 
 <section class="research">
   <div class="research_container">
-    <h1> UX RESEARCH </h1>
+    <h1> UX RESEARCH </h1><hr>
     <p> User surveys and user stories are used to decide what features are necessary
       for simpleBox. To do that, I sent out a survey to find out what users were proactively
        using, their habits, and their competition in content and devices use.
@@ -123,7 +123,7 @@
 </section>
 
 <section class="branding">
-  <h1> BRANDING AND TYPOGRAPHY </h1>
+  <h1> BRANDING AND TYPOGRAPHY </h1><hr>
   <p> The next step in building the application is deciding on the brand and typography.
     The main goal of this web app is to provide a collection of notes, images, and links
     where users can store and share. Therefore, I wanted the brand and typography to
@@ -133,10 +133,10 @@
 
 
 <section class="low_fidelity">
-  <h1> USABILITY TESTING </h1>
+  <h1> USABILITY TESTING </h1><hr>
   <p>After defining the brand identity for simpleBox, I created low-fidelity/medium
-    fidelity wireframes with balsamiq and photoshop to test on usertesting.com and
-    in-person to see whether the product was user friendly to the users. These are
+    fidelity wireframes with balsamiq and photoshop to <b>test on usertesting.com and
+    in-person </b> to see whether the product was user friendly to the users. These are
     the main questions I asked. </p>
   <p><b>1. Look around and talk about what you think this is about? What can you do
     here? What is it for? What strikes you about it? </b></p>
@@ -154,11 +154,11 @@
 </section>
 
 <section class="high_fidelity">
-  <h1> HIGH-FIDELITY PROTOTYPES </h1>
+  <h1> HIGH-FIDELITY PROTOTYPES </h1><hr>
   <p>After going through user testing for the low/medium prototypes and making iteration based on feedback, I used
     Sketch to create high-fidelity prototypes. Then I made a clickable prototypes on InVision and asked users to
     navigate through the prototypes and provide feedback. Below are the discussion questions
-    I asked during the interview process: </p>
+    I asked during the <b>contextual interview: </b> </p>
 
   <p><b>1. What do you make of the page? What strikes you about it?</b> </p>
   <p><b>2. What frustrations do you have when navigating through the pages?</b> </p>
@@ -166,8 +166,8 @@
   <p><b>4. Do you see yourself using this application? Why or Why not?</b> </p>
   <p>Overall, users thought that the experience was pleasing and that the application is presentable in a simplified, yet professional design. </p>
 
-  <p>However, I found out that there was a slight delay when users were trying to add content to simpleBox. To tackle this issue, I created two
-    versions of the dashboard with two different placements of the add button. I then conducted
+  <p>However, I found out that there was a <b>slight delay when users were attempting to add content to simpleBox.</b> To tackle this issue, I created two
+    versions of the dashboard with two different placements of the add button. Afterwards, I conducted
      a <b>preference test on UsabilityHub </b> to see which version is more intuitive.
      Based on the results, version one (original) performs better than version two by 80:20.
      The test had 10 responses which may not be the best representative of the majority. Although
@@ -179,7 +179,7 @@
 </section>
 
 <section class="final_product">
-  <h1> FINAL PRODUCT </h1>
+  <h1> FINAL PRODUCT </h1><hr>
   <div class="conclusion">
     <p>After researching, user testing, and designing through Balsamiq, Illustrator, and
       Photoshop/Sketch, the final product is completed with harmoniously-working colors and
